--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="Arthur" content="Patrick" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css"
-    <title>Flexbox and Grid Project</title>
-    <!-- fonts -->
+    <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
+    <title>Flex Box and Grid Project</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -135,7 +136,7 @@
       <section class="hero section flow">
         <img
           class="hero__img hero__img-center"
-          src="/public/hero.png
+          src="/public/hero.png"
           alt="Guy sitting in a wheel chair"
           width="1386"
           height="1809"
